tests/error/wrongModulo.tpc
int main(void){
	int * b;
	return b % 3;
}